# gtest-cmake-example

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile
test/: CMakeLists.txt  test_project1.cpp
